--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "multicaret/laravel-acquaintances": "^3.6",
+        "spatie/laravel-medialibrary": "^11.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
