feat: Ajout du package de filtrage de Spatie, et création de la vue index des projets avec le filtre d'activé.

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.9",
         "multicaret/laravel-acquaintances": "^3.6",
         "spatie/laravel-medialibrary": "^11.11",
+        "spatie/laravel-query-builder": "^6.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
